Eliminate some warnings